231213 commit - 그룹 초대하고 그룹 미팅 입장까지 완료 / 그룹에서 나가려고 할 때 group 객체를 db에서 지울수가 없음. user가 userRequest 참조 -> userRequest가 request 참조 -> request가 그룹 참조...... 쭈욱 cascade로 지워버리면 user까지 삭제될 것임. 수작업을 하든 방법을 찾을 예정